Minor API doc improvement
